:bug: corrige visibilidade da imagem zoom

--- a/style/acervo.css
+++ b/style/acervo.css
@@ -205,10 +205,6 @@ button:active {
   max-width: 100%;
   max-height: 100%;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  -ms-transform: translate(-50%,-50%);
   background-size: cover;
   z-index: 10;
   transition: transform 0.3s;
